@@ -32,6 +32,8 @@ remove = if
 remove = File::Spec
 remove = File::Temp
 remove = File::Path
+remove = Portable
+remove = File::HomeDir
 
 ;[Prereqs]
 ;Foo::Bar = 0
